<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.ebinar.infolder.activities.SignupActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView3"
        android:src="@mipmap/home_background"
        android:scaleType="centerCrop"
        android:layout_alignTop="@+id/linearLayout" />


    <android.support.v7.widget.Toolbar android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/toolbar"
        android:layout_marginTop="0dp"
        android:background="@color/orange_first">
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_firstname"
            android:background="@drawable/input_background"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:hint="@string/signup_firstname"
            android:textColorHint="@color/white_80"
            android:textColor="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_lastname"
            android:background="@drawable/input_background"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:hint="@string/signup_lastname"
            android:textColorHint="@color/white_80"
            android:textColor="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_email"
            android:background="@drawable/input_background"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/signup_email"
            android:textColorHint="@color/white_80"
            android:textColor="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_phone"
            android:background="@drawable/input_background"
            android:layout_marginTop="10dp"
            android:inputType="phone"
            android:hint="@string/signup_phone"
            android:textColorHint="@color/white_80"
            android:textColor="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_company"
            android:background="@drawable/input_background"
            android:layout_marginTop="10dp"
            android:hint="@string/signup_company"
            android:textColorHint="@color/white_80"
            android:textColor="@color/white" />

        <Button
            android:background="@drawable/rounded_orange_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_send"
            android:id="@+id/home_login"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />




    </LinearLayout>

</RelativeLayout>

