

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.ebinar.infolder.activities.LoginActivity"
    android:background="@color/orange_first">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView3"
        android:src="@mipmap/home_background"
        android:scaleType="centerCrop" />

    <android.support.v7.widget.Toolbar android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/toolbar"
        android:layout_marginTop="0dp"
        android:background="@color/orange_first">
    </android.support.v7.widget.Toolbar>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_enter"
        android:id="@+id/config_logout"
        android:textColor="@color/white"
        android:layout_marginRight="34dp"
        android:layout_marginLeft="0dp"
        android:layout_above="@+id/login_recover"
        android:layout_alignStart="@+id/login_recover"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_orange_button" />

    <EditText
        android:background="@drawable/input_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:layout_above="@+id/config_logout"
        android:textColor="@color/white"
        android:layout_marginRight="34dp"
        android:layout_alignStart="@+id/config_logout"
        android:layout_marginBottom="10dp"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:lines="1"
        android:textColorHint="@color/white_80" />

    <EditText
        android:background="@drawable/input_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_email"
        android:textColor="@color/white"
        android:layout_marginRight="34dp"
        android:layout_above="@+id/login_password"
        android:layout_alignStart="@+id/login_password"
        android:layout_marginBottom="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/login_email"
        android:singleLine="true"
        android:lines="1"
        android:textColorHint="@color/white_80" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_message"
        android:id="@+id/textView"
        android:layout_above="@+id/login_email"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="68dp"
        android:layout_marginRight="68dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@mipmap/brandcheck_logo" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:background="@color/orange_light"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="10dp"></LinearLayout>

    <Button
        android:background="@color/transparent"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/login_request_service"
        android:id="@+id/login_signup"
        android:textColor="@color/white"
        android:layout_marginRight="34dp"
        android:layout_marginLeft="34dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textSize="12sp" />

    <Button
        android:background="@color/transparent"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/login_recover_password"
        android:id="@+id/login_recover"
        android:textColor="@color/white"
        android:layout_marginRight="0dp"
        android:layout_marginLeft="34dp"
        android:layout_above="@+id/login_signup"
        android:layout_alignEnd="@+id/login_signup"
        android:layout_marginBottom="5dp"
        android:textSize="12sp" />


</RelativeLayout>
