<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.ebinar.infolder.activities.ConfigActivity"
    tools:showIn="@layout/activity_config">


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:theme="@style/TextLabel"
                >

                <AutoCompleteTextView
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/config_first_name"
                    android:maxLines="1"
                    android:textColor="@color/material_grey_400"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:theme="@style/TextLabel"
                >

                <AutoCompleteTextView
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/config_last_name"
                    android:maxLines="1"
                    android:textColor="@color/material_grey_400"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:theme="@style/TextLabel"
                >

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/config_email"
                    android:maxLines="1"
                    android:textColor="@color/material_grey_400"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_enter"
                android:id="@+id/config_send"
                android:textColor="@color/white"
                android:layout_above="@+id/login_recover"
                android:layout_alignStart="@+id/login_recover"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_orange_button"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Salir de Brandcheck"
                android:id="@+id/config_logout"
                android:textColor="@color/white"
                android:layout_above="@+id/login_recover"
                android:layout_alignStart="@+id/login_recover"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_orange_button"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
